Prevent the resources and chart containers to shrink too much

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -26,9 +26,22 @@
     gap: var(--gap-size);
 
     &.wide-column {
+      container-type: size;
       flex: 1 1 auto;
-      min-width: var(--width-small-column);
       max-width: calc(var(--width-small-column) * 2 + var(--gap-size));
+      min-width: var(--width-small-column);
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
+    @container (width < 40rem) {
+      .row-container {
+        flex-direction: column;
+
+        .growing-container {
+          width: 100%;
+        }
+      }
     }
   }
   .row-container {
